--- a/SweetHistory/res/values/strings.xml
+++ b/SweetHistory/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="titleSectionAdvices">CONSEJOS</string>
     <string name="titleSectionEvents">EVENTOS</string>
     <string name="titleSectionSintoms">SINTOMAS</string>
+	<string name="drawer_open">Drawer Open</string>
+	<string name="drawer_close">Drawer Closed</string>
     <string name="name">nombre(s)</string>
     <string name="lastname">apellidos</string>
     <string name="birthday">fecha de nacimiento</string>
@@ -23,17 +25,18 @@
     <string name="question">¿qué esta pasando?</string>
     <string name="addAlarm">Alarmas</string>
 	<string name="cancelAlarm">Cancelar</string>
-	<string name="notificationTitle">Recuerda... </string>
+	<string name="notificationTitle">Recuerda&#8230; </string>
 	<string name="datePickerTitle">Selecciona una fecha</string>
-	<string name="txtAlarm">Te recuerdo que...</string>
-	<string-array name="planets_array">
-        <item>Mercury</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
+	<string name="txtAlarm">Recordar qué&#8230;</string>
+
+	<string name="sectionTimeLine">Timeline</string>
+	<string name="sectionBabyRegister">Registrar Bebé</string>
+	<string name="sectionDoctorRegister">Registrar Doctor</string>
+	<string name="sectionAlarms">Alarmas</string>
+	<string-array name="sectionNames">
+		<item>@string/sectionTimeLine</item>
+		<item>@string/sectionBabyRegister</item>
+		<item>@string/sectionAlarms</item>
+		<item>@string/sectionDoctorRegister</item>
     </string-array>
 </resources>
