--- a/SweetHistory/res/values/strings.xml
+++ b/SweetHistory/res/values/strings.xml
@@ -33,10 +33,24 @@
 	<string name="sectionBabyRegister">Registrar Bebé</string>
 	<string name="sectionDoctorRegister">Registrar Doctor</string>
 	<string name="sectionAlarms">Alarmas</string>
-	<string-array name="sectionNames">
+    <string name="hintEach">Cada&#8230;</string>
+    <string name="txtDateInitial">A partir de&#8230;</string>
+    <string name="txtTimeInitial">A las&#8230;</string>
+    <string name="timePickerTile">Selecciona una hora</string>
+    <string name="errorEmptyFiels">Se deben llenar todos los campos</string>
+    <string name="alarmDeleted">Alarma eliminada correctamente</string>
+    <string-array name="sectionNames">
 		<item>@string/sectionTimeLine</item>
 		<item>@string/sectionBabyRegister</item>
 		<item>@string/sectionAlarms</item>
 		<item>@string/sectionDoctorRegister</item>
+    </string-array>
+
+    <string-array name="units">
+        <item>segundo (s)</item>
+        <item>minuto (s)</item>
+        <item>hora (s)</item>
+        <item>día (s)</item>
+        <item>semana (s)</item>
     </string-array>
 </resources>
