--- a/SweetHistory/res/values/strings.xml
+++ b/SweetHistory/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_addEvent">Agregar evento</string>
     <string name="titleSectionAdvices">CONSEJOS</string>
     <string name="titleSectionEvents">EVENTOS</string>
-    <string name="titleSectionSintoms">SINTOMAS</string>
+    <string name="titleSectionSintoms">SÍNTOMAS</string>
 	<string name="drawer_open">Drawer Open</string>
 	<string name="drawer_close">Drawer Closed</string>
     <string name="name">nombre(s)</string>
@@ -17,22 +17,22 @@
     <string name="apgar">apgar</string>
     <string name="lastVisit">última visita</string>
     <string name="city">ciudad</string>
-    <string name="save">guardar</string>
+    <string name="save">Guardar</string>
     <string name="cellNumber">núm. celular</string>
     <string name="officeNumber">núm. consultorio</string>
     <string name="email">correo electrónico</string>
     <string name="address">dirección</string>
-    <string name="question">¿qué esta pasando?</string>
+    <string name="question">¿Qué esta pasando?</string>
     <string name="addAlarm">Alarmas</string>
 	<string name="cancelAlarm">Cancelar</string>
 	<string name="notificationTitle">Recuerda&#8230; </string>
 	<string name="datePickerTitle">Selecciona una fecha</string>
 	<string name="txtAlarm">Recordar qué&#8230;</string>
 
-	<string name="sectionTimeLine">Timeline</string>
+	<string name="sectionTimeLine">Historia</string>
 	<string name="sectionBabyRegister">Registrar Bebé</string>
 	<string name="sectionDoctorRegister">Registrar Doctor</string>
-	<string name="sectionAlarms">Alarmas</string>
+	<string name="sectionAlarms">Recordatorios</string>
 	<string-array name="sectionNames">
 		<item>@string/sectionTimeLine</item>
 		<item>@string/sectionBabyRegister</item>
